--- a/style.css
+++ b/style.css
@@ -1,89 +1,8 @@
-body {
-    margin: 0;
+body{
+    background-color: cornflowerblue;
     text-align: center;
-    padding-top;
-    800px;
-    font-style: italic;
-    font-weight: bold;
-    background: linear-gradient(#f01b07 0%, #f78819 100%);
 }
-
-.profile {
-    width: 175px;
-    margin-bottom: 50px;
-    border-radius: 50px;
-    text-align: left;
-}
-
-h2 {
-    font-size: 38px;
-    line-height: 1.3;
-    font-family: 'Comic', sans-serif;
-    font-weight: bold;
-    font-style: italic;
-}
-
-#M.F.H {
-    position: absolute;
-    overflow: hidden;
-    height: 800px;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    opacity: 0.83;
-    display: table;
-    width: 100%;
-    height: 100%;
-    color: white;
-}
-
-h3 {
-    font-weight: bolder;
-    font-display: auto
-}
-
-.parallax-inner {
-    display: table-cell;
-    position: relative;
-    text-align: center;
-    vertical-align: middle;
-}
-
-button {
-    font-weight: bold;
-    font-size: 20px;
-
-}
-
-#Avengers {
-    width: 200px;
-}
-
-.menu {
-
-    list-style: none;
-    font-family: monospace sans-serif;
-    position: sticky;
-    top: 10px;
-    right: 30px;
-    z-index: 10;
-    cursor: pointer;
-}
-
-.links {
-
-    float: left;
-    color: blue;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 9px;
-    padding-right: 9px;
-    font-family: comic, sans-serif;
-    font-size: 20px;
-}
-
-.links:hover {
-
-    background-color: yellow;
+img{
+    width: 350px;
+    height: 200px;
 }
